--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser-dynamic": "^6.0.3",
         "@angular/router": "^6.0.3",
         "@nebular/theme": "^2.0.0-rc.9",
+        "@swimlane/ngx-datatable": "^13.0.1",
         "angular2-ladda": "^2.0.0",
         "bootstrap": "^4.1.1",
         "core-js": "^2.5.4",
